public/res/style/index.css
html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    font-family: "Helvetica", sans-serif;
    color: #212721;
    background-color: #f2f2f3;
    overflow-y: hidden;
}

header {
    width: 100%;
}

main {
    width: 100%;
    height: 96%;
    overflow-y: scroll;
}

.footer-text {
    font-size: 1rem;
}

/* header elements */

#logo-container {
    height: 100%;
    width: 100%;
    text-align: center;
}

#logo {
    padding: 7vw;
    width: 60vw;
    margin: auto;
}

/* main elements */

#main-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    /*justify-content: space-between;*/
    width: 100%;
    height: 70%;
    margin-top: 1em;

}

#hello-container {
    width: 100%;
    text-wrap: normal;
    font-size: 1.3rem;
}

#hello-text {
    margin: 0;
    text-align: center;
    padding: 0 1em;
}

/* input containers*/

#dark-screen {
    position: absolute;
    top: 0;
    left: 0;
    display: none;
    opacity: 50%;
    background-color: black;
    width: 100%;
    height: 100%;
    z-index: 1;
}


#destination-container {
    position: relative;
    font-size: 1.3em;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    height: 15em;
    width: 90%;
}

.destination-input {
    top: 0;
    border: none;
    background-color: rgba(0,0,0,0);
    padding: .7em 0 .7em .3em;
    width: 100%;
    font-size: 1.3rem;
}

.input-container {
    width: 100%;
    background-color: rgb(231, 231, 231);
    border-bottom: 2px solid #00957a;
    margin: 0 0 0 0;
}

.front {
    margin: 0.8em 0;
}

.front input {
    padding: 1em -.3em 1em .3em;
    font-size: 1rem;
}

.search-icons{
    margin: 0 1em;
}

#back-arrow {
    border-style: none;
    background-color: rgba(0,0,0,0);
}

.back-svg {
    height: 1.7em;
}

.back-icon {
    fill: #212721;
    stroke: none;
}

.search {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

#clear-x {
    border-style: none;
    background-color: rgba(0,0,0,0);
}

.x-svg {
    height: 1.4em;
}

.x-icon {
    fill:none;
    stroke: #a1a1a1;
    stroke-linecap:round;
    stroke-linejoin:round;
    stroke-width:70px;
}

.my-location {
    width: 100%;
    height: 3em;
    border-style: none;
    transition: .1s ease;
    background-color: #00957a;
    color: #f2f2f3;
    font-weight: bold;
}

.my-location:active {
    filter: brightness(.5);
}

/* DROPDOWN LIST STYLINGS */
.droplist {
    width: 100%;
}

.droplist-content {
    box-sizing: border-box;
    padding: 1em 1em;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    background-color: rgb(231, 231, 231);
    border-bottom: 1px solid #c6c6c6;
}

.place-label {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    max-width: 70%;
}

.place-name {
    margin: 0;
    font-size: 1.2rem;
}

.place-area {
    margin: 0;
    font-size: .8em;
    color: #9c9c9c;
}

.place-options {
    max-width: 30%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.svg {
    width: 1.5em;
    margin: 0 .4em;
}

.action-icon {
    fill: #212721;
}

#route-button-container {
    margin: 1em 0 1em 0;
}

.route-button {
    height: 100%;
    font-size: 1.4rem;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    border-style: none;
    padding: 10px;
    background-color: #00957a;
    color: #f2f2f3;
    transition: .02s ease;
    border-radius: 4px;
}

.route-pointer {
    width: 1em;
    margin: 0 .3em 0 .7em;
}

.route-icon {
    fill: #f2f2f3;
    stroke:#000;
    stroke-miterlimit:10;
}

#route-button:active {
    transform: scale(.9);
}

.route-ready {
    pointer-events: auto !important;
    opacity: 1 !important;
}

.route-unready {
    pointer-events: none !important;
    opacity: .3 !important;
}

/* Search history styles */

#search-history {
    margin: .4em 0 .2em 0;
    width: 90%;
    height: fit-content;
}

#search-history h4 {
    text-align: center;
    font-size: 1.1rem;
    margin: .7em;
}

#generated-history {
    display: flex;
    flex-direction: column;
    /*height: 4em;*/
    overflow-x: auto;
    align-items: center;
    justify-content: space-between;
}

#generated-history div {
    background-color: #212721;
    text-align: center;
    width: 90%;
    max-width: 90%;
    display: flex;
    align-items: center;
    height: 1em;
    margin: .5em;
    padding: 10px;
    border-radius: 3px;
}

#generated-history div p {
    color: #f2f2f3;
    font-size: .8em;
    white-space: inherit;
    width: 100%;
}
#generated-history div span{
    font-size: .9em;
    font-weight: bold;
    white-space: nowrap;
}


/* Cookie styling */
.cookie-container {
    position: absolute;
    box-sizing: border-box;
    width: 100vw;
    bottom: 0;
    background-color: #383E42;
    color: #f2f2f3;
    display: flex;
    flex-direction: column;
    z-index: 15;
    padding: 1em;
}

.cookie-titleBox {
    font-size: 1.5em;
    padding-bottom: 1em;
    font-weight: bold;
}

.cookie-infoBox {
    padding-bottom: 1em;
}

.cookie-infoBox p {
    margin: .2em;
}

.cookie-infoBox span a {
    text-decoration: underline;
    color: #1e9cef;
}

.cookie-choices {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
}

.cookie-choices span{
    border: solid 2px #00957a;
    padding: 1.3vh;
    min-width: 35%;
    text-align: center;
    font-weight: bold;
}

.accept-btn {
    background-color: #00957a;
}

